database production setting

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,10 +19,12 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-
 development:
   <<: *default
   database: learning_management_development
+  username: postgres
+  password: password
+  host: 127.0.0.1
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -79,20 +81,7 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: learning_management_production
-    username: learning_management
-    password: <%= ENV["LEARNING_MANAGEMENT_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: learning_management_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: learning_management_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: learning_management_production_cable
-    migrations_paths: db/cable_migrate
+  <<: *default
+  database: learning_management_production
+  username: learning_management
+  password: <%= ENV["LEARNING_MANAGEMENT_DATABASE_PASSWORD"] %>
